--- a/views/layouts/application.html
+++ b/views/layouts/application.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1><img src="/img/neon-logo.png" width="80" /><span>It works!</span></h1>
+        <h1><img src="/img/neonode.svg" width="220" /></h1>
     </header>
     <div class="yield">
         <%= yield %>
